--- a/templates/connector.md.j2
+++ b/templates/connector.md.j2
@@ -4,6 +4,7 @@
 ## Prerequisites
 {% for step in prereq_steps -%}
 {{ loop.index }}. {{ step }}{{ LB }}
+{{ LB }}   {# ▼ creates a completely empty "visual" line #}
 {%- endfor %}
 {% if prereq_steps|length == 0 %}
 > _No special prerequisites._
@@ -50,6 +51,7 @@ Below table lists the fields shown in the connector configuration form.
 {% for t in tables -%}
 | **{{ t.name }}** | - | - |
 
+{{ LB }}            {# ▼ new, completely blank line #}
 {%- for col in t.columns -%}
 |  | {{ col.name }} | {{ col.type }} |
 {%- endfor %}
